# MACHINE-PROJEKT-2

./: CMakeLists.txt  README.md  gitignore  pom.xml  state.txt
CYukon/Yukon/: Board.c  Board.h  Card.c  Card.h  Load.c  Load.h  Main.c  SaveDeck.c
JYukon/: Yukon.ps1  pom.xml  state.txt
JYukon/src/main/java/: module-info.java
JYukon/src/main/java/com/solitaire/yukon/: HelloApplication.java  HelloController.java  Main.java
JYukon/src/main/resources/: stylesheet.css  stylesheet2.css
JYukon/src/main/resources/com/solitaire/yukon/: hello-view.fxml
Yukon/: Board.c  Board.h  Card.c  Card.h  Load.c  Load.h  Main.c  Main.h  SaveDeck.c  SaveDeck.h  Shuffle.c  Shuffle.h  Split.c  Split.h  Unhide.c  Unhide.h
